CB-13733 Cluster stays in UPDATE_IN_PROGRESS state after validation error
- set stack and cluster status to `AVAILABLE` after validation failure
- add logs
- smaller refactors